// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Circular Progress Indicator Default Color 1`] = `
<div
  className="MuiCircularProgress-root MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Determinate Live Example 1`] = `
<div
  aria-valuenow={70}
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "transform": "rotate(270.000deg)",
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={
        Object {
          "strokeDasharray": "126.920",
          "strokeDashoffset": "11.423px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Determinate Variant 1`] = `
<div
  aria-valuenow={70}
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "transform": "rotate(270.000deg)",
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={
        Object {
          "strokeDasharray": "126.920",
          "strokeDashoffset": "11.423px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Disable Shrink 1`] = `
<div
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleDisableShrink MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Indeterminate Variant 1`] = `
<div
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Playground 1`] = `
<div
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Primary Color 1`] = `
<div
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Secondary Color 1`] = `
<div
  className="MuiCircularProgress-root MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Static Live Example 1`] = `
<div
  className="CircularProgressDemo-root-83"
>
  <div
    aria-valuenow={5}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "120.574px",
          }
        }
      />
    </svg>
  </div>
  <div
    aria-valuenow={25}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "95.190px",
          }
        }
      />
    </svg>
  </div>
  <div
    aria-valuenow={50}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "63.460px",
          }
        }
      />
    </svg>
  </div>
  <div
    aria-valuenow={75}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "31.730px",
          }
        }
      />
    </svg>
  </div>
  <div
    aria-valuenow={100}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "0.000px",
          }
        }
      />
    </svg>
  </div>
  <div
    aria-valuenow={5}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "120.574px",
          }
        }
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Static Variant With Value 5 1`] = `
<div
  aria-valuenow={5}
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "transform": "rotate(-90deg)",
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={
        Object {
          "strokeDasharray": "126.920",
          "strokeDashoffset": "120.574px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Static Variant With Value 25 1`] = `
<div
  aria-valuenow={25}
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "transform": "rotate(-90deg)",
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={
        Object {
          "strokeDasharray": "126.920",
          "strokeDashoffset": "95.190px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Static Variant With Value 75 1`] = `
<div
  aria-valuenow={75}
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "transform": "rotate(-90deg)",
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={
        Object {
          "strokeDasharray": "126.920",
          "strokeDashoffset": "31.730px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Storyshots Components/Circular Progress Indicator Static Variant With Value 100 1`] = `
<div
  aria-valuenow={100}
  className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-static"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "transform": "rotate(-90deg)",
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={
        Object {
          "strokeDasharray": "126.920",
          "strokeDashoffset": "0.000px",
        }
      }
    />
  </svg>
</div>
`;
